# fleet

./: README.md  pyproject.toml
fleet/: __init__.py  cli.py
fleet/core/: __init__.py  engine.py  models.py  store.py
fleet/deployment/: __init__.py  config.py  deployer.py
fleet/health/: __init__.py  alerts.py  checker.py  restart.py
fleet/packaging/: __init__.py  builder.py  registry.py
fleet/rolling/: __init__.py  updater.py  version.py
fleet/scaling/: __init__.py  autoscaler.py  load_balancer.py  resource_monitor.py
fleet/server/: __init__.py  app.py
tests/: test_fleet.py
